# glue

./: CMakeLists.txt  Doxyfile.in  LICENSE  Readme.md
include/glad/: glad.h
include/glue/: GlBuffer.h  GlConfig.h.in  GlFrameBuffer.h  GlIndexBuffer.h  GlInternal.h  GlProgram.h  GlQuery.h  GlRenderBuffer.h  GlShader.h  GlTexture.h  GlTexture1D.h  GlTexture2D.h  GlTexture3D.h  GlUtils.h  GlVertexArray.h  GlVertexBuffer.h
samples/: CMakeLists.txt  common.h  textures.cpp  triangle.cpp
src/: GlBuffer.cpp  GlFrameBuffer.cpp  GlIndexBuffer.cpp  GlInternal.cpp  GlProgram.cpp  GlQuery.cpp  GlRenderBuffer.cpp  GlShader.cpp  GlTexture.cpp  GlTexture1D.cpp  GlTexture2D.cpp  GlTexture3D.cpp  GlVertexArray.cpp  GlVertexBuffer.cpp  glad.c
